# meritrank

./: .gitignore  00_MakerDAO.ipynb  01_MD_reputation.ipynb  02_SybilAttack.ipynb  03_Visualize.ipynb  LICENSE  README.md  pyproject.toml  simple_example_recommendation.ipynb
datasets/sourcecred/: accounts.json  credGrainView  makerDao_graph.json  md_users.txt
datasets/sourcecred/makerDao_work/: timeperiod.txt  wg0.json  wg1.json  wg10.json  wg100.json  wg101.json  wg102.json  wg103.json  wg104.json  wg105.json  wg106.json  wg107.json  wg108.json  wg109.json  wg11.json  wg110.json  wg111.json  wg112.json  wg113.json  wg114.json  wg115.json  wg116.json  wg117.json  wg118.json  wg119.json  wg12.json  wg120.json  wg121.json  wg122.json  wg123.json  wg124.json  wg125.json  wg126.json  wg127.json  wg128.json  wg129.json  wg13.json  wg130.json  wg131.json  wg132.json  (+114 more)
trust/: __init__.py  experimental.py  hitting_time.py  maxflow_based.py  pagerank.py  random_walks.py  reciprocal_scaled_bounded_hitting_time.py  reciprocal_scaled_pagerank.py  seed_choice.py  trustrank.py
