[tool.poetry]
name = "meritrank"
version = "0.1.0"
description = "Experiments with Sybil-Resistence of Feedback-based Reputation"
authors = ["grimadas <bulat.nasrulin@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
seaborn = "^0.11.2"
numpy = "^1.23.0"
networkx = "^2.8.4"
tqdm = "^4.64.0"
igraph = "^0.9.11"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
